// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupCTANewsletterSignup setup complete step renders correctly with pre-existing CTAs 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-rrm-express-setup mdc-layout-grid--collapsed"
  >
    <div
      class="mdc-layout-grid__inner googlesitekit-rrm-express-setup__layout"
    >
      <div
        class="googlesitekit-rrm-express-setup__sidebar mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="googlesitekit-rrm-express-setup__sidebar-inner"
        >
          <ol
            class="googlesitekit-stepper googlesitekit-stepper--rail"
          >
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 1 of 4 (completed)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 1 of 4 (completed)."
                >
                  <svg />
                </span>
                <div
                  class="googlesitekit-stepper__step-progress-line"
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Connect publication
                </div>
              </div>
            </li>
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 2 of 4 (completed)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 2 of 4 (completed)."
                >
                  <svg />
                </span>
                <div
                  class="googlesitekit-stepper__step-progress-line"
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Add publication policies
                </div>
              </div>
            </li>
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 3 of 4 (completed)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 3 of 4 (completed)."
                >
                  <svg />
                </span>
                <div
                  class="googlesitekit-stepper__step-progress-line"
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Set up a sign-up form
                </div>
              </div>
            </li>
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--active"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 4 of 4 (active)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 4 of 4 (active)."
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--label googlesitekit-typography--large"
                >
                  Setup complete
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
      <div
        class="googlesitekit-rrm-express-setup__content mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="googlesitekit-rrm-express-setup-complete"
        >
          <div
            class="googlesitekit-rrm-express-setup-complete__content"
          >
            <div
              class="googlesitekit-rrm-express-setup-complete__header"
            >
              <svg />
              <h2
                class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__title googlesitekit-typography--headline googlesitekit-typography--medium"
              >
                Your newsletter signup form is ready!
              </h2>
            </div>
            <div
              class="googlesitekit-rrm-express-setup-complete__details"
            >
              <h3
                class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__details-title googlesitekit-typography--label googlesitekit-typography--large"
              >
                What to know about your new CTA:
              </h3>
              <div
                class="googlesitekit-rrm-express-setup-complete__detail-list"
              >
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Display order
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    Because you already have other CTAs active, this new form will be displayed last. You can reorder your CTAs at any time in the 
                    <a
                      aria-label="Publisher center (opens in a new tab)"
                      class="googlesitekit-cta-link"
                      href="https://accounts.google.com/accountchooser?continue=https%3A%2F%2Fpublishercenter.google.com%2Freader-revenue-manager%2Fcontent-access%2Foverview%3Fpublication%3DABCD_123-4%26utm_source%3Dsitekit&Email=wapuu.wordpress%40gmail.com&utm_source=sitekit"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="googlesitekit-cta-link__contents"
                      >
                        Publisher center
                      </span>
                      <span
                        class="googlesitekit-icon-wrapper"
                        style="margin-left: 5px;"
                      >
                        <svg />
                      </span>
                    </a>
                  </p>
                </div>
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Placement settings
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    To change where the form appears on your site, go to Site Kit settings.
                  </p>
                </div>
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Content
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    You can edit the content of the CTA any time in 
                    <a
                      aria-label="Publisher center (opens in a new tab)"
                      class="googlesitekit-cta-link"
                      href="https://accounts.google.com/accountchooser?continue=https%3A%2F%2Fpublishercenter.google.com%2Freader-revenue-manager%2Fcontent-access%2Fctas%2Fnewsletter%2F5%3Fpublication%3DABCD_123-4%26utm_source%3Dsitekit&Email=wapuu.wordpress%40gmail.com&utm_source=sitekit"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="googlesitekit-cta-link__contents"
                      >
                        Publisher center
                      </span>
                      <span
                        class="googlesitekit-icon-wrapper"
                        style="margin-left: 5px;"
                      >
                        <svg />
                      </span>
                    </a>
                  </p>
                </div>
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Don't see it on your site?
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    If you're still having trouble, 
                    <a
                      aria-label="contact support (opens in a new tab)"
                      class="googlesitekit-cta-link"
                      href="https://wordpress.org/support/plugin/google-site-kit/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="googlesitekit-cta-link__contents"
                      >
                        contact support
                      </span>
                      <span
                        class="googlesitekit-icon-wrapper"
                        style="margin-left: 5px;"
                      >
                        <svg />
                      </span>
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="googlesitekit-rrm-express-setup-complete__actions"
          >
            <button
              class="mdc-button mdc-button--raised"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Return to Dashboard
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SetupCTANewsletterSignup setup complete step renders correctly without pre-existing CTAs 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-rrm-express-setup mdc-layout-grid--collapsed"
  >
    <div
      class="mdc-layout-grid__inner googlesitekit-rrm-express-setup__layout"
    >
      <div
        class="googlesitekit-rrm-express-setup__sidebar mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="googlesitekit-rrm-express-setup__sidebar-inner"
        >
          <ol
            class="googlesitekit-stepper googlesitekit-stepper--rail"
          >
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 1 of 4 (completed)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 1 of 4 (completed)."
                >
                  <svg />
                </span>
                <div
                  class="googlesitekit-stepper__step-progress-line"
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Connect publication
                </div>
              </div>
            </li>
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 2 of 4 (completed)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 2 of 4 (completed)."
                >
                  <svg />
                </span>
                <div
                  class="googlesitekit-stepper__step-progress-line"
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Add publication policies
                </div>
              </div>
            </li>
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 3 of 4 (completed)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 3 of 4 (completed)."
                >
                  <svg />
                </span>
                <div
                  class="googlesitekit-stepper__step-progress-line"
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Set up a sign-up form
                </div>
              </div>
            </li>
            <li
              class="googlesitekit-stepper__step googlesitekit-stepper__step--active"
            >
              <div
                class="googlesitekit-stepper__step-progress"
              >
                <span
                  aria-label="Step 4 of 4 (active)."
                  class="googlesitekit-stepper__step-number"
                  title="Step 4 of 4 (active)."
                />
              </div>
              <div
                class="googlesitekit-stepper__step-info"
              >
                <div
                  class="googlesitekit-typography googlesitekit-stepper__step-title googlesitekit-typography--label googlesitekit-typography--large"
                >
                  Setup complete
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
      <div
        class="googlesitekit-rrm-express-setup__content mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="googlesitekit-rrm-express-setup-complete"
        >
          <div
            class="googlesitekit-rrm-express-setup-complete__content"
          >
            <div
              class="googlesitekit-rrm-express-setup-complete__header"
            >
              <svg />
              <h2
                class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__title googlesitekit-typography--headline googlesitekit-typography--medium"
              >
                Your newsletter signup form is ready!
              </h2>
            </div>
            <div
              class="googlesitekit-rrm-express-setup-complete__details"
            >
              <h3
                class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__details-title googlesitekit-typography--label googlesitekit-typography--large"
              >
                What to know about your new CTA:
              </h3>
              <div
                class="googlesitekit-rrm-express-setup-complete__detail-list"
              >
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Placement settings
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    To change where the form appears on your site, go to Site Kit settings.
                  </p>
                </div>
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Content
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    You can edit the content of the CTA any time in 
                    <a
                      aria-label="Publisher center (opens in a new tab)"
                      class="googlesitekit-cta-link"
                      href="https://accounts.google.com/accountchooser?continue=https%3A%2F%2Fpublishercenter.google.com%2Freader-revenue-manager%2Fcontent-access%2Fctas%2Fnewsletter%2F5%3Fpublication%3DABCD_123-4%26utm_source%3Dsitekit&Email=wapuu.wordpress%40gmail.com&utm_source=sitekit"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="googlesitekit-cta-link__contents"
                      >
                        Publisher center
                      </span>
                      <span
                        class="googlesitekit-icon-wrapper"
                        style="margin-left: 5px;"
                      >
                        <svg />
                      </span>
                    </a>
                  </p>
                </div>
                <div
                  class="googlesitekit-rrm-express-setup-complete__detail"
                >
                  <h4
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-title googlesitekit-typography--label googlesitekit-typography--medium"
                  >
                    Don't see it on your site?
                  </h4>
                  <p
                    class="googlesitekit-typography googlesitekit-rrm-express-setup-complete__detail-description googlesitekit-typography--body googlesitekit-typography--medium"
                  >
                    If you're still having trouble, 
                    <a
                      aria-label="contact support (opens in a new tab)"
                      class="googlesitekit-cta-link"
                      href="https://wordpress.org/support/plugin/google-site-kit/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="googlesitekit-cta-link__contents"
                      >
                        contact support
                      </span>
                      <span
                        class="googlesitekit-icon-wrapper"
                        style="margin-left: 5px;"
                      >
                        <svg />
                      </span>
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="googlesitekit-rrm-express-setup-complete__actions"
          >
            <button
              class="mdc-button mdc-button--raised"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Return to Dashboard
              </span>
            </button>
            <button
              class="mdc-button googlesitekit-rrm-express-setup-complete__view-on-site-cta mdc-button--tertiary"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                View on your site
              </span>
              <svg />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
